# nst-feature-extractor-comparison

./: .gitignore  CREDITS.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
examples/: README.md
scripts/: setup_adm.sh  sweep_backend.py
src/diffusion_style/: __init__.py  cli.py  compare.py  config.py  images.py  losses.py  model.py  sweep.py  transfer.py
src/diffusion_style/backends/: __init__.py  adm.py  base.py  convnext.py  ddpm.py  dinov2.py  dinov3.py  sd.py  vgg.py
tests/: test_cli.py  test_config.py  test_losses.py
