[project]
name = "diffusion-style"
version = "0.1.0"
description = "Comparison harness for Gatys-style neural style transfer with interchangeable frozen feature extractors (VGG, SD1.5, pixel DDPM, ConvNeXt, DINOv2/v3, ADM)."
requires-python = ">=3.10"
dependencies = [
    "torch",
    "torchvision",
    "diffusers>=0.27",
    "transformers>=4.40",
    "accelerate>=0.30",
    "pillow",
    "numpy",
]

[project.optional-dependencies]
# ADM's runtime deps. The guided_diffusion *code* is NOT pip-installable
# (openai's setup.py is broken: py_modules instead of packages), so
# scripts/setup_adm.sh git-clones it into third_party/ and the adm backend adds
# that to sys.path. Install these runtime deps + clone via: bash scripts/setup_adm.sh
adm = [
    "blobfile",
]

[project.scripts]
diffusion-style = "diffusion_style.cli:main"
diffusion-style-sweep = "diffusion_style.sweep:main"
diffusion-style-compare = "diffusion_style.compare:main"

[dependency-groups]
dev = [
    "pytest>=8",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# Allow the git direct reference in the 'adm' optional dependency.
[tool.hatch.metadata]
allow-direct-references = true

# Route torch/torchvision to the CUDA 12.4 wheel index on Linux/Windows
# (without this, uv resolves the CPU-only wheels from PyPI). macOS has no CUDA
# wheels, so it falls back to PyPI (CPU/MPS) — gating on platform keeps
# `uv sync` working everywhere.
[tool.uv.sources]
torch = [
    { index = "pytorch-cu124", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
torchvision = [
    { index = "pytorch-cu124", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]

[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true
